single types work, setTimeout wrapping it is the only way to avoid rerender so figure out why that error occurs

--- a/src/index.css
+++ b/src/index.css
@@ -54,61 +54,73 @@
   margin: 2px;
 }
 
+.type-pair{
+  flex: 0 0 100%;
+  text-align: center;
+}
+
 .type-button:hover{
   filter: brightness(80%);
 }
 
-.normal{
+.type-button.normal{
   background-color: var(--normal);
 }
-.fire{
+.type-button.fire{
   background-color: var(--fire);
 }
-.water{
+.type-button.water{
   background-color: var(--water);
 }
-.electric{
+.type-button.electric{
   background-color: var(--electric);
 }
-.grass{
+.type-button.grass{
   background-color: var(--grass);
 }
-.ice{
+.type-button.ice{
   background-color: var(--ice);
 }
-.fighting{
+.type-button.fighting{
   background-color: var(--fighting);
 }
-.poison{
+.type-button.poison{
   background-color: var(--poison);
 }
-.ground{
+.type-button.ground{
   background-color: var(--ground);
 }
-.flying{
+.type-button.flying{
   background-color: var(--flying);
 }
-.psychic{
+.type-button.psychic{
   background-color: var(--psychic);
 }
-.bug{
+.type-button.bug{
   background-color: var(--bug);
 }
-.rock{
+.type-button.rock{
   background-color: var(--rock);
 }
-.ghost{
+.type-button.ghost{
   background-color: var(--ghost);
 }
-.dragon{
+.type-button.dragon{
   background-color: var(--dragon);
 }
-.dark{
+.type-button.dark{
   background-color: var(--dark);
 }
-.steel{
+.type-button.steel{
   background-color: var(--steel);
 }
-.fairy{
+.type-button.fairy{
   background-color: var(--fairy);
+}
+
+.result{
+  display: flex;
+  width: 100%;
+  text-align: center;
+  justify-content: space-around;
 }
